added final touch to UI

--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -130,18 +130,18 @@
           </p>
         </div>
       </div>
-      <div class="py-5 mt-5" style="background-color: #f7ece2">
-        <div class="container" style="background-color: #f7ece2">
+      <div class="py-5 mt-5 container rounded" style="background-color: #fff">
+        <div class="container" style="background-color: #fff">
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
-              <div class="card shadow-lg">
+              <div class="card shadow-lg rounded">
                 <img
                   class="d-block img-fluid"
                   style="background-color: lightcoral"
                   src="./delegates-logo/un-white.png"
                   alt=""
                 />
-                <div class="card-body" style="background-color: #fff">
+                <div class="card-body" style="background-color: #f4f4f4">
                   <h3>United Nations General Assembly</h3>
                   <p class="card-text">
                     This is a wider card with supporting text below as a natural
@@ -163,14 +163,14 @@
               </div>
             </div>
             <div class="col col-lg-4 d-flex align-items-stretch">
-              <div class="card shadow-lg">
+              <div class="card shadow-lg rounded">
                 <img
                   class="d-block img-fluid p-4 pb-5"
                   style="background-color: lightcoral"
                   src="./delegates-logo/wha.png"
                   alt=""
                 />
-                <div class="card-body" style="background-color: #fff">
+                <div class="card-body" style="background-color: #f4f4f4">
                   <h3>World Health Assembly</h3>
                   <p class="card-text">
                     This is a wider card with supporting text below as a natural
@@ -192,14 +192,14 @@
               </div>
             </div>
             <div class="col col-lg-4 d-flex align-items-stretch">
-              <div class="card shadow-lg">
+              <div class="card shadow-lg rounded">
                 <img
                   class="d-block img-fluid"
                   style="background-color: lightcoral"
                   src="./delegates-logo/ctc.png"
                   alt=""
                 />
-                <div class="card-body" style="background-color: #fff">
+                <div class="card-body" style="background-color: #f4f4f4">
                   <h3>Counter Terrorism Committee</h3>
                   <p class="card-text">
                     This is a wider card with supporting text below as a natural
@@ -222,14 +222,14 @@
             </div>
 
             <div class="col col-lg-4 d-flex align-items-stretch">
-              <div class="card shadow-lg">
+              <div class="card shadow-lg rounded">
                 <img
                   class="d-block img-fluid"
                   style="background-color: lightcoral"
                   src="./delegates-logo/unhrc-white.png"
                   alt=""
                 />
-                <div class="card-body" style="background-color: #fff">
+                <div class="card-body" style="background-color: #f4f4f4">
                   <h3>United Nations Human Right Council</h3>
                   <p class="card-text">
                     This is a wider card with supporting text below as a natural
@@ -251,14 +251,14 @@
               </div>
             </div>
             <div class="col col-lg-4 d-flex align-items-stretch">
-              <div class="card shadow-lg">
+              <div class="card shadow-lg rounded">
                 <img
                   class="d-block img-fluid"
                   style="background-color: lightcoral"
                   src="./delegates-logo/aippm-ip.png"
                   alt=""
                 />
-                <div class="card-body" style="background-color: #fff">
+                <div class="card-body" style="background-color: #f4f4f4">
                   <h3>All India Political Parties Meet</h3>
                   <p class="card-text">
                     This is a wider card with supporting text below as a natural
@@ -280,14 +280,14 @@
               </div>
             </div>
             <div class="col col-lg-4 d-flex align-items-stretch">
-              <div class="card shadow-lg">
+              <div class="card shadow-lg rounded">
                 <img
                   class="d-block img-fluid"
                   style="background-color: lightcoral"
                   src="./delegates-logo/ip-white.png"
                   alt=""
                 />
-                <div class="card-body" style="background-color: #fff">
+                <div class="card-body" style="background-color: #f4f4f4">
                   <h3>International Press Corps</h3>
 
                   <p class="card-text">
@@ -312,10 +312,10 @@
           </div>
         </div>
       </div>
+      <hr class="featurette-divider" />
     </main>
-
     <!-- FOOTER -->
-    <footer class="container">
+    <footer class="container mt-4">
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>
         © 2017-2021 Company, Inc. · <a href="#">Privacy</a> ·
