--- a/contact.html
+++ b/contact.html
@@ -91,9 +91,7 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a
-                    class="dropdown-item"
-                    href="./messages/advisory-board.html"
+                  <a class="dropdown-item" href="./messages/advisory-board.html"
                     >Advisory Board</a
                   >
                 </li>
@@ -144,177 +142,182 @@
       </div>
 
       <!-- Second Row [Team]-->
-      <div class="row pb-5 mb-4">
-        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-          <!-- Card-->
-          <div class="card shadow-lg border-0 rounded">
-            <div class="card-body p-0">
-              <img
-                src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
-                alt=""
-                class="w-100 card-img-top"
-              />
-              <div class="p-4">
-                <h5 class="mb-0">Mark Rockwell</h5>
-                <p class="small text-muted">CEO - Consultant</p>
-                <ul class="social mb-0 list-inline mt-3">
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-facebook-f"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-twitter"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-instagram"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-linkedin"></i
-                    ></a>
-                  </li>
-                </ul>
+      <section class="container rounded" style="background: #fff">
+        <div class="row p-5 mb-4">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                />
+                <div class="p-4">
+                  <h5 class="mb-0">Mark Rockwell</h5>
+                  <p class="small text-muted">CEO - Consultant</p>
+                  <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-facebook-f"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-3_ybnq8v.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                />
+                <div class="p-4">
+                  <h5 class="mb-0">Mark Rockwell</h5>
+                  <p class="small text-muted">CEO - Consultant</p>
+                  <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-facebook-f"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799924/profile-4_s3fort.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                />
+                <div class="p-4">
+                  <h5 class="mb-0">Mark Rockwell</h5>
+                  <p class="small text-muted">CEO - Consultant</p>
+                  <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-facebook-f"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-2_ujssbj.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                />
+                <div class="p-4">
+                  <h5 class="mb-0">Mark Rockwell</h5>
+                  <p class="small text-muted">CEO - Consultant</p>
+                  <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-facebook-f"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
-
-        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-          <!-- Card-->
-          <div class="card shadow-lg border-0 rounded">
-            <div class="card-body p-0">
-              <img
-                src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-3_ybnq8v.jpg"
-                alt=""
-                class="w-100 card-img-top"
-              />
-              <div class="p-4">
-                <h5 class="mb-0">Mark Rockwell</h5>
-                <p class="small text-muted">CEO - Consultant</p>
-                <ul class="social mb-0 list-inline mt-3">
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-facebook-f"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-twitter"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-instagram"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-linkedin"></i
-                    ></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-          <!-- Card-->
-          <div class="card shadow-lg border-0 rounded">
-            <div class="card-body p-0">
-              <img
-                src="https://res.cloudinary.com/mhmd/image/upload/v1570799924/profile-4_s3fort.jpg"
-                alt=""
-                class="w-100 card-img-top"
-              />
-              <div class="p-4">
-                <h5 class="mb-0">Mark Rockwell</h5>
-                <p class="small text-muted">CEO - Consultant</p>
-                <ul class="social mb-0 list-inline mt-3">
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-facebook-f"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-twitter"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-instagram"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-linkedin"></i
-                    ></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-          <!-- Card-->
-          <div class="card shadow-lg border-0 rounded">
-            <div class="card-body p-0">
-              <img
-                src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-2_ujssbj.jpg"
-                alt=""
-                class="w-100 card-img-top"
-              />
-              <div class="p-4">
-                <h5 class="mb-0">Mark Rockwell</h5>
-                <p class="small text-muted">CEO - Consultant</p>
-                <ul class="social mb-0 list-inline mt-3">
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-facebook-f"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-twitter"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-instagram"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-linkedin"></i
-                    ></a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <iframe
-      class="container mb-5"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.8605622545974!2d77.33091981556557!3d28.54391058245284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce44e80a9461b%3A0x302ec8d3d5cb8d1a!2sAmity%20University%20Noida!5e0!3m2!1sen!2sus!4v1612112348525!5m2!1sen!2sus"
-        width="600"
-        height="450"
-        frameborder="0"
-        style="border: 0"
-        allowfullscreen=""
-        aria-hidden="false"
-        tabindex="0"
-      ></iframe>
-
+      </section>
+      <!-- <section class="container"> -->
+        <iframe
+          class="container my-5"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.8605622545974!2d77.33091981556557!3d28.54391058245284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce44e80a9461b%3A0x302ec8d3d5cb8d1a!2sAmity%20University%20Noida!5e0!3m2!1sen!2sus!4v1612112348525!5m2!1sen!2sus"
+          width="600"
+          height="450"
+          frameborder="0"
+          style="border: 0"
+          allowfullscreen=""
+          aria-hidden="false"
+          tabindex="0"
+        ></iframe>
+      <!-- </section> -->
       <!-- FOOTER -->
+
       <footer class="container mt-5">
+        <hr class="featurette-divider" />
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
           © 2017-2021 Company, Inc. · <a href="#">Privacy</a> ·
