--- a/gallery.html
+++ b/gallery.html
@@ -129,7 +129,7 @@
       >
         <div class="col-md-6 px-0">
           <h1 class="display-4 font-italic">
-            Title of a longer featured blog post
+            Gallery
           </h1>
           <p class="lead my-3">
             Multiple lines of text that form the lede, informing new readers
@@ -476,9 +476,10 @@
           </div>
         </div>
       </div>
-
+      
       <!-- FOOTER -->
       <footer class="container">
+        <hr class="featurette-divider" />
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
           © 2017-2021 Company, Inc. · <a href="#">Privacy</a> ·
