--- a/messages/org-com.html
+++ b/messages/org-com.html
@@ -24,7 +24,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <div class="container-fluid">
-        <a class="navbar-brand mx-1" href="index.html"
+        <a class="navbar-brand mx-1" href="../index.html"
           ><img src="../static/logo-main.svg" width="55px" alt=""
         /></a>
         <button
@@ -111,7 +111,9 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../committees-gallery.html">Committees</a>
+              <a class="nav-link" href="../committees-gallery.html"
+                >Committees</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../gallery.html">Gallery</a>
@@ -143,166 +145,169 @@
       </div>
 
       <!-- Second Row [Team]-->
-      <div class="row pb-5 mb-4">
-        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-          <!-- Card-->
-          <div class="card shadow-lg border-0 rounded">
-            <div class="card-body p-0">
-              <img
-                src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
-                alt=""
-                class="w-100 card-img-top"
-              />
-              <div class="p-4">
-                <h5 class="mb-0">Mark Rockwell</h5>
-                <p class="small text-muted">CEO - Consultant</p>
-                <ul class="social mb-0 list-inline mt-3">
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-facebook-f"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-twitter"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-instagram"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-linkedin"></i
-                    ></a>
-                  </li>
-                </ul>
+      <section class="container rounded" style="background: #fff">
+        <div class="row p-5 mb-4">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                />
+                <div class="p-4">
+                  <h5 class="mb-0">Mark Rockwell</h5>
+                  <p class="small text-muted">CEO - Consultant</p>
+                  <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-facebook-f"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-          <!-- Card-->
-          <div class="card shadow-lg border-0 rounded">
-            <div class="card-body p-0">
-              <img
-                src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-3_ybnq8v.jpg"
-                alt=""
-                class="w-100 card-img-top"
-              />
-              <div class="p-4">
-                <h5 class="mb-0">Mark Rockwell</h5>
-                <p class="small text-muted">CEO - Consultant</p>
-                <ul class="social mb-0 list-inline mt-3">
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-facebook-f"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-twitter"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-instagram"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-linkedin"></i
-                    ></a>
-                  </li>
-                </ul>
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-3_ybnq8v.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                />
+                <div class="p-4">
+                  <h5 class="mb-0">Mark Rockwell</h5>
+                  <p class="small text-muted">CEO - Consultant</p>
+                  <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-facebook-f"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-          <!-- Card-->
-          <div class="card shadow-lg border-0 rounded">
-            <div class="card-body p-0">
-              <img
-                src="https://res.cloudinary.com/mhmd/image/upload/v1570799924/profile-4_s3fort.jpg"
-                alt=""
-                class="w-100 card-img-top"
-              />
-              <div class="p-4">
-                <h5 class="mb-0">Mark Rockwell</h5>
-                <p class="small text-muted">CEO - Consultant</p>
-                <ul class="social mb-0 list-inline mt-3">
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-facebook-f"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-twitter"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-instagram"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-linkedin"></i
-                    ></a>
-                  </li>
-                </ul>
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799924/profile-4_s3fort.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                />
+                <div class="p-4">
+                  <h5 class="mb-0">Mark Rockwell</h5>
+                  <p class="small text-muted">CEO - Consultant</p>
+                  <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-facebook-f"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
-          <!-- Card-->
-          <div class="card shadow-lg border-0 rounded">
-            <div class="card-body p-0">
-              <img
-                src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-2_ujssbj.jpg"
-                alt=""
-                class="w-100 card-img-top"
-              />
-              <div class="p-4">
-                <h5 class="mb-0">Mark Rockwell</h5>
-                <p class="small text-muted">CEO - Consultant</p>
-                <ul class="social mb-0 list-inline mt-3">
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-facebook-f"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-twitter"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-instagram"></i
-                    ></a>
-                  </li>
-                  <li class="list-inline-item m-0">
-                    <a href="#" class="social-link"
-                      ><i class="fa fa-linkedin"></i
-                    ></a>
-                  </li>
-                </ul>
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <img
+                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-2_ujssbj.jpg"
+                  alt=""
+                  class="w-100 card-img-top"
+                />
+                <div class="p-4">
+                  <h5 class="mb-0">Mark Rockwell</h5>
+                  <p class="small text-muted">CEO - Consultant</p>
+                  <ul class="social mb-0 list-inline mt-3">
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-facebook-f"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-instagram"></i
+                      ></a>
+                    </li>
+                    <li class="list-inline-item m-0">
+                      <a href="#" class="social-link"
+                        ><i class="fa fa-linkedin"></i
+                      ></a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- FOOTER -->
       <footer class="container">
+        <hr class="featurette-divider" />
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>
           © 2017-2021 Company, Inc. · <a href="#">Privacy</a> ·
