--- a/register/ip_register.html
+++ b/register/ip_register.html
@@ -123,7 +123,13 @@
     </nav>
 
     <!-- form -->
-    <h1 class="m-5 text-center">International Press Registration</h1>
+    <section class="container">
+      <div class="p-5 mt-5 text-grey rounded" style="background-color: #f5a98c">
+        <div class="px-0">
+          <h1 class="display-4 font-italic">International Press Application</h1>
+        </div>
+      </div>
+    </section>
     <main class="container mt-5 mb-5">
       <form class="needs-validation" novalidate="">
         <div class="row g-3">
@@ -396,7 +402,8 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="container">
+    <footer class="container mt-4">
+      <hr class="featurette-divider" />
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>
         © 2017-2021 Company, Inc. · <a href="#">Privacy</a> ·
