--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -254,7 +254,7 @@
               <div class="card shadow-lg rounded">
                 <img
                   class="d-block img-fluid"
-                  style="background-color: lightcoral"
+                  style="background-color: rgb(255, 93, 93)"
                   src="./delegates-logo/aippm-ip.png"
                   alt=""
                 />
