--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
               <a class="nav-link" href="#">AMIMUN Club</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
+              <a class="nav-link" href="./contact.html">Contact Us</a>
             </li>
           </ul>
         </div>
