--- a/messages/sec.html
+++ b/messages/sec.html
@@ -122,7 +122,7 @@
               <a class="nav-link" href="#">AMIMUN Club</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link" href="../contact.html">Contact Us</a>
             </li>
           </ul>
         </div>
