--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading">
-                Mr. Ashok
+                Dr. Ashok
                 <span class="text-muted">Chauhan</span>
               </h2>
               <h5>Founder</h5>
@@ -339,7 +339,7 @@
           <div class="row featurette">
             <div class="col-md-7 order-md-2">
               <h2 class="featurette-heading">
-                Mr. Ashok
+                Dr. Atul
                 <span class="text-muted">Chauhan</span>
               </h2>
               <h5>Chancellor</h5>
@@ -374,7 +374,7 @@
                 Dr. Balvinder
                 <span class="text-muted">Shukla</span>
               </h2>
-              <h5>Founder</h5>
+              <h5>Vice Chancellor</h5>
               <p class="lead">
                 Amity is made up of a multitude of people, from various
                 backgrounds, interact and work with one another. AMIMUN takes
