--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             style="background-color: #f4f4f4"
           >
             <div class="col p-4 d-flex flex-column position-static">
-              <p class="card-text mb-auto">
+              <p class="card-text mb-auto" style="text-align: justify;">
                 Dear Delegate, <br />
                 It is an absolute pleasure to invite you to the
                 <strong
@@ -317,7 +317,7 @@
                 <span class="text-muted">Chauhan</span>
               </h2>
               <h5>Founder</h5>
-              <p class="lead">
+              <p class="lead" style="text-align: justify;">
                 The Secretariat of Amity International Model United Nations
                 Conference consists of individuals who have consistently proven
                 themselves to be hardworking and knowledgeable. Each person was
@@ -343,7 +343,7 @@
                 <span class="text-muted">Chauhan</span>
               </h2>
               <h5>Chancellor</h5>
-              <p class="lead">
+              <p class="lead" style="text-align: justify;">
                 Amity is made up of a multitude of people, from various
                 backgrounds, interact and work with one another. AMIMUN takes
                 advantage of this, allowing for a huge international platform,
@@ -375,7 +375,7 @@
                 <span class="text-muted">Shukla</span>
               </h2>
               <h5>Vice Chancellor</h5>
-              <p class="lead">
+              <p class="lead" style="text-align: justify;">
                 Amity is made up of a multitude of people, from various
                 backgrounds, interact and work with one another. AMIMUN takes
                 advantage of this, allowing for a huge international platform,
@@ -405,7 +405,7 @@
                 <span class="text-muted">Hasteer</span>
               </h2>
               <h5>[ENTER ROLE]</h5>
-              <p class="lead">
+              <p class="lead" style="text-align: justify;">
                 Amity is made up of a multitude of people, from various
                 backgrounds, interact and work with one another. AMIMUN takes
                 advantage of this, allowing for a huge international platform,
