--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -13,6 +13,11 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./gallery-style.css" />
+    <style>
+      *{
+        text-align: left;
+      }
+    </style>
     <title>AMIMUN '21</title>
   </head>
   <body>
